Fix error in test